[gd_scene load_steps=4 format=3 uid="uid://bugxsskkqk0fo"]

[ext_resource type="Script" path="res://prefabs/lua_instance/lua_instance.gd" id="1_ve861"]
[ext_resource type="PackedScene" uid="uid://b2go35j4fghfi" path="res://components/entity_component/entity_component.tscn" id="2_3ihoh"]

[sub_resource type="SceneReplicationConfig" id="SceneReplicationConfig_3qu0y"]
properties/0/path = NodePath(".:owner_peer_id")
properties/0/spawn = true
properties/0/replication_mode = 1

[node name="LuaInstance" type="Node"]
script = ExtResource("1_ve861")

[node name="LuauVM" type="LuauVM" parent="."]

[node name="EntityComponent" parent="." node_paths=PackedStringArray("multiplayer_synchronizer") instance=ExtResource("2_3ihoh")]
id = &"LuaInstance"
multiplayer_synchronizer = NodePath("../MultiplayerSynchronizer")

[node name="MultiplayerSynchronizer" type="MultiplayerSynchronizer" parent="."]
replication_config = SubResource("SceneReplicationConfig_3qu0y")

[connection signal="interrupt" from="LuauVM" to="." method="_on_luau_vm_interrupt"]
